--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -51,10 +51,10 @@
 
     <div *ngIf="purchaseContext.canApplySubscriptions && !appliedSubscription">
       <h2 class="page-header mt-2" translate="reservation-page.subscription"></h2>
-      <p>
-        <span translate="reservation-page.overview.insert-subscription-code"></span>
-        <input type="text" #subscriptionInput>
-        <button type="button" class="btn btn-secondary" translate="reservation-page.overview.apply-subscription-code" (click)="applySubscription(subscriptionInput.value)"></button>
+      <p class="form-inline">
+        <label class="my-1 mr-2" for="subscription-input-code" translate="reservation-page.overview.insert-subscription-code"></label>
+        <input type="text" id="subscription-input-code" #subscriptionInput class="form-control mb-2 mr-sm-2">
+        <button type="button" class="btn btn-primary mb-2" translate="reservation-page.overview.apply-subscription-code" (click)="applySubscription(subscriptionInput.value)"></button>
       </p>
     </div>
 
