mobile friendly subscription form input

--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -53,8 +53,8 @@
       <h2 class="page-header mt-2" translate="reservation-page.subscription"></h2>
       <p class="form-inline">
         <label class="my-1 mr-2" for="subscription-input-code" translate="reservation-page.overview.insert-subscription-code"></label>
-        <input type="text" id="subscription-input-code" #subscriptionInput class="form-control mb-2 mr-sm-2">
-        <button type="button" class="btn btn-primary mb-2" translate="reservation-page.overview.apply-subscription-code" (click)="applySubscription(subscriptionInput.value)"></button>
+        <input type="text" id="subscription-input-code" #subscriptionInput class="form-control mb-2 mr-sm-2 col-12 col-md-auto">
+        <button type="button" class="btn btn-primary mb-2 col-12 col-md-auto" translate="reservation-page.overview.apply-subscription-code" (click)="applySubscription(subscriptionInput.value)"></button>
       </p>
     </div>
 
