--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -13,6 +13,17 @@
       <h2 translate="reservation-page.title"></h2>
     </div>
 
+    <div class="row" *ngIf="alertMessage.visible">
+      <div class="col-12">
+        <div class="alert" [ngClass]="alertMessage.type" role="alert">
+          <span [translate]="alertMessage.message"></span>
+          <button type="button" class="close" attr.aria-label="{{'common.close' | translate}}" (click)="closeAlertMessage();">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-12" [ngClass]="{'col-md-7': !reservationInfo.orderSummary.free && purchaseContext.invoicingConfiguration.invoiceAllowed}">
         <app-summary-table [purchaseContext]="purchaseContext" [reservationInfo]="reservationInfo" [displayRemoveSubscription]="true" (removeSubscription)="removeSubscription($event)"></app-summary-table>
