--- a/src/app/reservation/summary-table/summary-table.component.html
+++ b/src/app/reservation/summary-table/summary-table.component.html
@@ -21,7 +21,7 @@
           <td class="text-right"><app-price-tag [event]="event" [formattedPrice]="reservationInfo.orderSummary.totalVAT"></app-price-tag></td>
       </tr>
       <tr>
-        <th colspan="3" translate="reservation-page.total"></th>
+        <th colspan="3">{{'reservation-page.total'|translate}}<span *ngIf="displaySplitPaymentNote"> *</span></th>
         <td class="text-right"><strong><app-price-tag [event]="event" [formattedPrice]="reservationInfo.orderSummary.totalPrice"></app-price-tag></strong></td>
       </tr>
       <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && event.vatIncluded">
@@ -30,6 +30,9 @@
       </tr>
       <tr *ngIf="!reservationInfo.orderSummary.free && !reservationInfo.orderSummary.displayVat">
           <td colspan="4">{{'invoice.vat-voided'|translate: {'0': ('common.vat' | translate)} }}</td>
+      </tr>
+      <tr *ngIf="displaySplitPaymentNote">
+        <td colspan="4">* {{'invoice.vat-not-added'|translate: {'0': ('common.vat' | translate)} }}</td>
       </tr>
   </tfoot>
 </table>
