replace displayName with (multi-language) title in the PurchaseContext interface

--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -10,7 +10,7 @@
   <div class="alert alert-success mb-5">
       <div class="row">
           <div class="col-sm-12">
-            <div class="h3" [innerHTML]="'reservation-page-complete.info-assign' | translate: {'0':event.displayName}"></div>
+            <div class="h3" [innerHTML]="'reservation-page-complete.info-assign' | translate: { '0': purchaseContextTitle }"></div>
           </div>
       </div>
       <div class="row mt-2">
