--- a/src/app/reservation/summary-table/summary-table.component.html
+++ b/src/app/reservation/summary-table/summary-table.component.html
@@ -12,7 +12,7 @@
       <td>
         <span *ngIf="summaryRow.type === 'DYNAMIC_DISCOUNT'" translate="reservation.dynamic.discount.description"></span>
         <span *ngIf="summaryRow.type === 'SUBSCRIPTION'">
-          {{'summary.table.subscription'|translate: {'0': summaryRow.name} }}
+          {{'summary.table.subscription'|translate: {'0': isSubscriptionPurchaseContext ? purchaseContext.title[currentLang] : summaryRow.name } }}
           <span *ngIf="displayRemoveSubscription">
             <button type="button" class="btn btn-link" (click)="removeSubscription.emit(summaryRow);" [ngbTooltip]="'summary.table.remove-applied-subscription-from-order'|translate">
               <span class="sr-only" translate="summary.table.remove-applied-subscription-from-order"></span>
@@ -38,7 +38,7 @@
       </tr>
       <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && purchaseContext.vatIncluded">
           <td colspan="3">{{'reservation-page.vat-included'|translate: {'0': purchaseContext.vat, '1': ('common.vat' | translate)} }}</td>
-          <td class="text-right">{{reservationInfo.orderSummary.totalVAT}} {{purchaseContext.currency}}</td>
+          <td class="text-right"><app-price-tag [purchaseContext]="purchaseContext" [formattedPrice]="reservationInfo.orderSummary.totalVAT"></app-price-tag></td>
       </tr>
       <tr *ngIf="!reservationInfo.orderSummary.free && !reservationInfo.orderSummary.displayVat">
           <td colspan="4">{{'invoice.vat-voided'|translate: {'0': ('common.vat' | translate)} }}</td>
