--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -1,6 +1,6 @@
 <app-purchase-context-container>
   <div *ngIf="event" class="add-margin-bottom">
-    <header><app-event-header [purchaseContext]="event"></app-event-header></header>
+    <header><app-purchase-context-header [purchaseContext]="event" type="event"></app-purchase-context-header></header>
     <main>
 
     <hr>
