--- a/src/app/subscription-display/subscription-display.component.html
+++ b/src/app/subscription-display/subscription-display.component.html
@@ -1,7 +1,7 @@
 <app-purchase-context-container>
   <div *ngIf="subscription" class="add-margin-bottom">
     <header>
-      <app-event-header [purchaseContext]="subscription"></app-event-header>
+      <app-purchase-context-header [purchaseContext]="subscription" type="subscription"></app-purchase-context-header>
     </header>
     <main>
       <hr>
