--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="event" class="add-margin-bottom">
-    <header><app-event-header [purchaseContext]="event" type="event"></app-event-header></header>
+    <header><app-purchase-context-header [purchaseContext]="event" type="event"></app-purchase-context-header></header>
     <main>
         <hr>
         <router-outlet></router-outlet>
