--- a/src/app/basic-subscription-info/basic-subscription-info.component.html
+++ b/src/app/basic-subscription-info/basic-subscription-info.component.html
@@ -1,13 +1,13 @@
-<div class="card-header bg-white event-header">
+<div class="card-header bg-white event-header" *ngIf="cardLayout">
   <img [src]="'/file/'+subscription.fileBlobId" class="mx-auto img-responsive" alt="" aria-hidden="true" role="presentation">
 </div>
-<div class="card-body">
-  <h2 class="card-title">{{title}}</h2>
+<div [class.card-body]="cardLayout">
+  <h2 [class.card-title]="cardLayout">{{title}}</h2>
   <div class="mt-3">
     <app-subscription-summary [subscription]="subscription"></app-subscription-summary>
   </div>
 </div>
-<div class="card-footer border-top-0 bg-white">
+<div class="card-footer border-top-0 bg-white" *ngIf="cardLayout">
   <div class="d-flex justify-content-end">
     <a [routerLink]="['/subscription', subscription.id]" class="btn btn-success stretched-link">{{'subscription-list.link' | translate}}<span class="sr-only"> {{title}}</span></a>
   </div>
