--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-banner-check></app-banner-check>
 <router-outlet></router-outlet>
+<app-feedback aria-live="polite" aria-atomic="true"></app-feedback>
