--- a/src/app/basic-event-info/basic-event-info.component.html
+++ b/src/app/basic-event-info/basic-event-info.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="card-footer border-top-0 bg-white">
       <div class="d-flex justify-content-end">
-        <a [routerLink]="['/event', event.shortName]" class="btn btn-success stretched-link">{{'event-list.link' | translate}}<span class="sr-only"> {{title}}</span></a>
+        <a [routerLink]="['/event', event.shortName]" [queryParams]="params" class="btn btn-success stretched-link">{{'event-list.link' | translate}}<span class="sr-only"> {{title}}</span></a>
       </div>
     </div>
 </div>
