--- a/src/app/shared/feedback/feedback.component.html
+++ b/src/app/shared/feedback/feedback.component.html
@@ -5,6 +5,6 @@
     </div>
   </ng-template>
   <div class="text-center">
-    <p class="lead mt-2">{{text}}</p>
+    <p class="lead mt-2">{{text | translate}}</p>
   </div>
 </ngb-toast>
