--- a/src/app/subscription-display/subscription-display.component.html
+++ b/src/app/subscription-display/subscription-display.component.html
@@ -14,12 +14,16 @@
 
           <div class="markdown-content" [innerHTML]="subscription.description[translateService.currentLang]"></div>
 
+          <div class="alert alert-warning text-center" role="alert" *ngIf="subscription.numAvailable == 0">
+            <h3 translate="show-subscription.sold-out.message"></h3>
+          </div>
+
           <hr class="mt-5">
 
           <app-footer-links [purchaseContext]="subscription"></app-footer-links>
 
           <div class="row d-flex justify-content-between mobile-add-margin-bottom">
-            <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
+            <div class="col-md-5 order-md-1 col-12"><button type="submit" *ngIf="subscription.numAvailable > 0" class="block-button btn btn-success" translate="show-event.continue"></button></div>
             <div class="col-md-5 order-md-0 col-12 "><a [href]="subscription.websiteUrl" class="block-button btn btn-light" translate="common.back-to-organizer"></a></div>
           </div>
         </form>
