--- a/src/app/shared/feedback/feedback.component.html
+++ b/src/app/shared/feedback/feedback.component.html
@@ -1,10 +1,10 @@
-<ngb-toast (hide)="hide()" [autohide]="true" [delay]="5000" *ngIf="active" [ngClass]="boxClass">
-  <ng-template ngbToastHeader>
-    <div class="d-flex justify-content-center w-100" [ngClass]="boxClass">
+<ngb-toast (hide)="hide()" [autohide]="true" [delay]="2500" *ngIf="active" [ngClass]="boxClass">
+  <div class="d-flex">
+    <div class="pl-2 pr-2 d-flex justify-content-center align-items-center" [ngClass]="headerClass">
       <fa-icon [icon]="boxIcon" size="2x"></fa-icon>
     </div>
-  </ng-template>
-  <div class="text-center">
-    <p class="lead mt-2">{{text | translate}}</p>
+    <div class="p-2 d-flex align-items-center">
+      <span class="message">{{text | translate}}</span>
+    </div>
   </div>
 </ngb-toast>
