--- a/src/app/shared/feedback/feedback.component.scss
+++ b/src/app/shared/feedback/feedback.component.scss
@@ -2,35 +2,33 @@
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/variables";
 
-:host {
+:host ::ng-deep .toast {
 
   @include media-breakpoint-down(lg) {
     position: fixed;
     top: 0;
     left: 0;
     margin: 2em;
-    ::ng-deep .toast {
-      max-width: unset;
-      background-color: white;
-    }
+    max-width: unset;
+    background-color: white;
   }
 
   @include media-breakpoint-up(lg) {
     position: fixed;
     bottom: 20px;
     right: 0;
-    margin: 2em;
+    margin: 2rem;
   }
-  padding: 0;
-  z-index: 1200;
 
-  ::ng-deep {
-    .toast-body {
-      padding: 0;
-    }
+  padding: 0;
+  z-index: 101;
+
+  .toast-body {
+    padding: 0;
   }
 }
 
 .message {
+  padding: 1rem;
   font-size: $font-size-base * 1.1;
 }
