--- a/src/app/event-list-all/event-list-all.component.html
+++ b/src/app/event-list-all/event-list-all.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="events && languages" class="application-container p-2 p-md-5">
-  <app-language-selector [contentLanguages]="languages"></app-language-selector>
+  <app-topbar [contentLanguages]="languages"></app-topbar>
 
   <h1 translate="event-list.title"></h1>
 
