--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="events" class="application-container p-2 p-md-5">
-  <app-language-selector [contentLanguages]="languages"></app-language-selector>
+  <app-topbar [contentLanguages]="languages"></app-topbar>
 
   <div *ngIf="containsEvents || !containsSubscriptions" class="mb-2">
     <h1 translate="event-list.title"></h1>
