--- a/src/app/subscription-list-all/subscription-list-all.component.html
+++ b/src/app/subscription-list-all/subscription-list-all.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="subscriptions" class="application-container p-2 p-md-5">
-  <app-language-selector [contentLanguages]="languages"></app-language-selector>
+  <app-topbar [contentLanguages]="languages"></app-topbar>
 
   <h1 translate="subscription.title"></h1>
 
