--- a/src/app/shared/topbar/top-bar.component.html
+++ b/src/app/shared/topbar/top-bar.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-language-selector [contentLanguages]="contentLanguages"></app-language-selector>
   </div>
-  <div class="ml-4">
+  <div class="ml-4" *ngIf="authenticationEnabled">
     <div *ngIf="user && !displayLoginButton" class="text-muted">
         <fa-icon [icon]="['fas', 'user-astronaut']" aria-hidden="true" [title]="'user.menu.title' | translate"></fa-icon> {{user?.firstName}} {{user?.lastName}}
     </div>
