--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -92,7 +92,7 @@
 
     <div class="mt-3 mb-3" aria-hidden="true"><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></div>
     <hr class="mt-5">
-    <app-event-footer-links [event]="event"></app-event-footer-links>
+    <app-event-footer-links [linksContainer]="event"></app-event-footer-links>
 
 
     <div class="row d-flex justify-content-between mobile-add-margin-bottom">
