show instance-wide privacy policy and/or terms and conditions links

--- a/src/app/event-list-all/event-list-all.component.html
+++ b/src/app/event-list-all/event-list-all.component.html
@@ -11,4 +11,7 @@
   <div class="alert text-center" *ngIf="events.length == 0">
     <h3 translate="event-list.no-events"></h3>
   </div>
+
+  <hr class="mt-5" *ngIf="linksContainer.termsAndConditionsUrl || linksContainer.privacyPolicyUrl" />
+  <app-footer-links [linksContainer]="linksContainer"></app-footer-links>
 </div>
